--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,6 +8,26 @@ body {
   background-color: #088ca5;
 }
 
+
+h1{
+  color: white;
+  font-size: 200px;
+    
+}
+
+h2{
+  color: white;
+  font-size: 200px;
+   
+}
+
+h3{
+  color: white;
+  font-size: 150px;
+    
+}
+
+
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
@@ -28,22 +48,3 @@ body {
 }
 
 
-.first-paragraph{
-  width: 1fr;
-  
-}
-
-.second-paragraph{
-  width: 1fr;
-  
-}
-
-.third-paragraph{
-  grid-column: 3/4;
-  
-}
-
-.fourth-paragraph{
-  grid-column: 4/5;
-  
-}
