🌇🎱 Checkpoint ./index.html:22308402/358 ./sass/styles.scss:22308402/193

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -11,19 +11,36 @@ body {
 
 h1{
   color: white;
-  font-size: 200px;
+  font-size: 170px; //was 200
+  margin: 0;
     
 }
 
 h2{
   color: white;
-  font-size: 200px;
+  font-size: 250px;
+  margin: 0;
    
 }
 
 h3{
   color: white;
-  font-size: 150px;
+  font-size: 100px;
+  margin: 0;
+    
+}
+
+h4{
+  color: white;
+  font-size: 50px;
+  margin: 0;
+    
+}
+
+h5{
+  color: white;
+  font-size: 25px;
+  margin: 0;
     
 }
 
