--- a/css/styles.css
+++ b/css/styles.css
@@ -10,17 +10,32 @@ body {
 
 h1 {
   color: white;
-  font-size: 200px;
+  font-size: 170px;
+  margin: 0;
 }
 
 h2 {
   color: white;
-  font-size: 200px;
+  font-size: 250px;
+  margin: 0;
 }
 
 h3 {
   color: white;
-  font-size: 150px;
+  font-size: 100px;
+  margin: 0;
+}
+
+h4 {
+  color: white;
+  font-size: 50px;
+  margin: 0;
+}
+
+h5 {
+  color: white;
+  font-size: 25px;
+  margin: 0;
 }
 
 .gallery {
