⏳🍠 Checkpoint ./index.html:22308402/1312 ./sass/styles.scss:22308402/128

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -28,7 +28,6 @@ h3{
   font-size: 100px;
   margin: 0;   
   
-  
 }
 
 h4{
@@ -66,3 +65,13 @@ h5{
 }
 
 
+ul {
+
+list-style-type: none;
+}
+
+.moretype{
+  font-size: 25px;
+  
+  
+}
