🐌👜 Checkpoint ./index.html:22308402/375 ./sass/styles.scss:22308402/403

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -11,15 +11,20 @@ body {
 
 h1{
   color: white;
-  font-size: 170px; //was 200
+  font-size: 250px; //was 200
   margin: 0;
+  
+  
     
 }
 
 h2{
+  display: flex;
   color: white;
-  font-size: 250px;
+  font-size: 170px;
   margin: 0;
+  min-height: 5px;
+  justify-content: flex-end;
    
 }
 
@@ -53,6 +58,8 @@ h5{
 
 .container {
   padding: 18px;
+  
+  
 
   @media (min-width: 800px) {
     padding: 32px;
