--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,17 @@ body {
 
 h1 {
   color: white;
-  font-size: 170px;
+  font-size: 250px;
   margin: 0;
 }
 
 h2 {
+  display: flex;
   color: white;
-  font-size: 250px;
+  font-size: 170px;
   margin: 0;
+  min-height: 5px;
+  justify-content: flex-end;
 }
 
 h3 {
