🍍💾 Checkpoint ./sass/styles.scss:22308402/517 ./index.html:22308402/65

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,41 +13,59 @@ h1 {
   font-size: 250px;
   margin: 0;
 }
+@media (min-width: 400px) {
+  h1 {
+    font-size: 200px;
+  }
+}
 
 h2 {
   display: flex;
   color: white;
   font-size: 170px;
   margin: 0;
-  min-height: 5px;
   justify-content: flex-end;
+}
+@media (min-width: 400px) {
+  h2 {
+    font-size: 135px;
+  }
 }
 
 h3 {
+  display: flex;
   color: white;
   font-size: 100px;
   margin: 0;
+  justify-content: center;
 }
 
 h4 {
   color: white;
   font-size: 50px;
   margin: 0;
+  margin-left: 40px;
 }
 
 h5 {
   color: white;
   font-size: 25px;
   margin: 0;
+  margin-left: 40px;
 }
 
-.gallery {
+.events {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 }
 
 .container {
   padding: 18px;
+}
+@media (min-width: 400px) {
+  .container {
+    padding: 62px;
+  }
 }
 @media (min-width: 800px) {
   .container {
