--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -14,7 +14,10 @@ h1{
   font-size: 250px; //was 200
   margin: 0;
   
-  
+  @media (min-width: 400px) {
+    font-size: 200px;
+    
+  } 
     
 }
 
@@ -23,15 +26,22 @@ h2{
   color: white;
   font-size: 170px;
   margin: 0;
-  min-height: 5px;
   justify-content: flex-end;
+  
+  @media (min-width: 400px) {
+    font-size: 135px;
+    
+  } 
    
 }
 
 h3{
+  display: flex;
   color: white;
   font-size: 100px;
-  margin: 0;   
+  margin: 0;
+  justify-content: center;
+
   
 }
 
@@ -39,6 +49,7 @@ h4{
   color: white;
   font-size: 50px;
   margin: 0;
+  margin-left: 40px;
     
 }
 
@@ -46,11 +57,12 @@ h5{
   color: white;
   font-size: 25px;
   margin: 0;
+  margin-left: 40px;
     
 }
 
 
-.gallery {
+.events {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 }
@@ -60,7 +72,11 @@ h5{
   padding: 18px;
   
   
-
+@media (min-width: 400px) {
+    padding: 62px;
+  }
+  
+ 
   @media (min-width: 800px) {
     padding: 32px;
   }
