--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,10 @@ body {
 
 h1 {
   color: white;
-  font-size: 250px;
+  font-size: 300px;
   margin: 0;
 }
-@media (min-width: 400px) {
+@media (max-width: 700px) {
   h1 {
     font-size: 200px;
   }
@@ -22,36 +22,55 @@ h1 {
 h2 {
   display: flex;
   color: white;
-  font-size: 170px;
+  font-size: 225px;
   margin: 0;
   justify-content: flex-end;
 }
-@media (min-width: 400px) {
+@media (max-width: 790px) {
   h2 {
     font-size: 135px;
+    justify-content: flex-start;
   }
 }
 
 h3 {
   display: flex;
   color: white;
-  font-size: 100px;
+  font-size: 135px;
   margin: 0;
   justify-content: center;
 }
+@media (max-width: 700px) {
+  h3 {
+    font-size: 80px;
+    justify-content: flex-start;
+  }
+}
 
 h4 {
+  color: white;
+  font-size: 75px;
+  margin: 0;
+  margin-left: 40px;
+}
+@media (max-width: 700px) {
+  h4 {
+    font-size: 65px;
+    justify-content: flex-start;
+  }
+}
+
+h5 {
   color: white;
   font-size: 50px;
   margin: 0;
   margin-left: 40px;
 }
-
-h5 {
-  color: white;
-  font-size: 25px;
-  margin: 0;
-  margin-left: 40px;
+@media (max-width: 700px) {
+  h5 {
+    font-size: 35px;
+    justify-content: flex-start;
+  }
 }
 
 .events {
