--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -11,10 +11,10 @@ body {
 
 h1{
   color: white;
-  font-size: 250px; //was 200
+  font-size: 300px; //was 200
   margin: 0;
   
-  @media (min-width: 400px) {
+  @media (max-width: 700px) {
     font-size: 200px;
     
   } 
@@ -24,12 +24,13 @@ h1{
 h2{
   display: flex;
   color: white;
-  font-size: 170px;
+  font-size: 225px;
   margin: 0;
   justify-content: flex-end;
   
-  @media (min-width: 400px) {
+  @media (max-width: 790px) {
     font-size: 135px;
+    justify-content: flex-start;
     
   } 
    
@@ -38,26 +39,46 @@ h2{
 h3{
   display: flex;
   color: white;
-  font-size: 100px;
+  font-size: 135px;
   margin: 0;
   justify-content: center;
+  
+  @media (max-width: 700px) {
+    font-size: 80px;
+    justify-content: flex-start;
+    
+  } 
 
   
 }
 
 h4{
   color: white;
-  font-size: 50px;
+  font-size: 75px;
   margin: 0;
   margin-left: 40px;
+  
+   @media (max-width: 700px) {
+    font-size: 65px;
+    justify-content: flex-start;
+    
+  } 
+
     
 }
 
 h5{
   color: white;
-  font-size: 25px;
+  font-size: 50px;
   margin: 0;
   margin-left: 40px;
+  
+  @media (max-width: 700px) {
+    font-size: 35px;
+    justify-content: flex-start;
+    
+  } 
+
     
 }
 
