--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,13 @@ body {
   background-color: #088ca5;
 }
 
-h1 {
+h1, h2, h3, h4, h5 {
   color: white;
-  font-size: 300px;
   margin: 0;
+}
+
+h1 {
+  font-size: 300px;
 }
 @media (max-width: 700px) {
   h1 {
@@ -21,9 +24,7 @@ h1 {
 
 h2 {
   display: flex;
-  color: white;
   font-size: 225px;
-  margin: 0;
   justify-content: flex-end;
 }
 @media (max-width: 790px) {
@@ -35,9 +36,7 @@ h2 {
 
 h3 {
   display: flex;
-  color: white;
   font-size: 135px;
-  margin: 0;
   justify-content: center;
 }
 @media (max-width: 700px) {
@@ -48,9 +47,7 @@ h3 {
 }
 
 h4 {
-  color: white;
   font-size: 75px;
-  margin: 0;
   margin-left: 40px;
 }
 @media (max-width: 700px) {
@@ -61,9 +58,7 @@ h4 {
 }
 
 h5 {
-  color: white;
   font-size: 50px;
-  margin: 0;
   margin-left: 40px;
 }
 @media (max-width: 700px) {
@@ -76,6 +71,7 @@ h5 {
 .events {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-template-rows: 1fr 0.9fr 0.7fr 0.7fr 0.4fr 1fr;
 }
 
 .container {
@@ -93,8 +89,8 @@ h5 {
 }
 @media (min-width: 1280px) {
   .container {
-    padding-right: 40px;
-    padding-left: 40px;
+    padding-right: 90px;
+    padding-left: 120px;
   }
 }
 
