--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,11 +8,16 @@ body {
   background-color: #088ca5;
 }
 
+h1, h2, h3, h4, h5{
+  color: white;
+  margin: 0;  
+  
+}
+
 
 h1{
-  color: white;
   font-size: 300px; //was 200
-  margin: 0;
+ 
   
   @media (max-width: 700px) {
     font-size: 200px;
@@ -23,9 +28,9 @@ h1{
 
 h2{
   display: flex;
-  color: white;
+  
   font-size: 225px;
-  margin: 0;
+  
   justify-content: flex-end;
   
   @media (max-width: 790px) {
@@ -38,9 +43,9 @@ h2{
 
 h3{
   display: flex;
-  color: white;
+  
   font-size: 135px;
-  margin: 0;
+  
   justify-content: center;
   
   @media (max-width: 700px) {
@@ -53,9 +58,9 @@ h3{
 }
 
 h4{
-  color: white;
+  
   font-size: 75px;
-  margin: 0;
+  
   margin-left: 40px;
   
    @media (max-width: 700px) {
@@ -68,9 +73,8 @@ h4{
 }
 
 h5{
-  color: white;
+  
   font-size: 50px;
-  margin: 0;
   margin-left: 40px;
   
   @media (max-width: 700px) {
@@ -86,11 +90,13 @@ h5{
 .events {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-template-rows: 1fr .9fr .7fr .7fr .4fr 1fr
 }
 
 
 .container {
   padding: 18px;
+  
   
   
 @media (min-width: 400px) {
@@ -103,8 +109,8 @@ h5{
   }
 
   @media (min-width: 1280px) {
-    padding-right: 40px;
-    padding-left: 40px;
+    padding-right: 90px;
+    padding-left: 120px;
   }
 }
 
