--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,6 +8,14 @@ body {
   background-color: #088ca5;
 }
 
+.headlines{
+  
+  display: grid;
+  grid-template-columns: 1fr;  
+  
+}
+
+
 h1, h2, h3, h4, h5{
   color: white;
   margin: 0;  
@@ -90,7 +98,7 @@ h5{
 .events {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-template-rows: 1fr .9fr .7fr .7fr .4fr 1fr
+  /*grid-template-rows: 1fr .9fr .7fr .7fr .4fr 1fr*/
 }
 
 
@@ -100,7 +108,7 @@ h5{
   
   
 @media (min-width: 400px) {
-    padding: 62px;
+    padding: 25px;
   }
   
  
@@ -109,7 +117,7 @@ h5{
   }
 
   @media (min-width: 1280px) {
-    padding-right: 90px;
+    padding-right: 120px;
     padding-left: 120px;
   }
 }
