--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,10 +2,13 @@
   box-sizing: border-box;
 }
 
+$color-blue: #088ca5;
+
 body {
+  color: black;
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
-  background-color: #088ca5;
+  background-color: $color-blue;
 }
 
 
@@ -18,7 +21,7 @@ body {
 
 
 h1{
-  font-size: 300px; //was 200
+  font-size: 300px; 
  
   
   @media (max-width: 700px) {
@@ -97,8 +100,7 @@ h5{
 
 
 .container {
-  padding: 18px;
-  
+  padding: 18px;  
   
   
 @media (min-width: 400px) {
@@ -111,8 +113,10 @@ h5{
   }
 
   @media (min-width: 1280px) {
-    padding-right: 120px;
-    padding-left: 120px;
+    padding-right{
+    right: 120px;
+    left: 120px;
+    }   
   }
 }
 
@@ -122,7 +126,7 @@ ul {
 list-style-type: none;
 }
 
-.first-paragraph, .second-paragraph, .third-paragraph, .fourth-paragraph{
+.event-list-one, .event-list-two, .event-list-three, .event-list-four{
   font-size: 25px;
   
 }
