--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -12,7 +12,7 @@ body {
 }
 
 
- h1,h2, h3, h4, h5{   
+ h1, h2, h3, h4, h5{   
   color: white;
   margin: 0;  
   
@@ -21,60 +21,54 @@ body {
 
 
 h1{
-  font-size: 300px; 
- 
+  font-size: 300px;  
   
   @media (max-width: 700px) {
     font-size: 200px;
-    
-  } 
+    padding-left: 40px;
+    } 
     
 }
 
 h2{
-  display: flex;
-  
-  font-size: 225px;
-  
+  display: flex;  
+  font-size: 225px;  
   justify-content: flex-end;
   
   @media (max-width: 790px) {
     font-size: 135px;
     justify-content: flex-start;
+    padding-left: 40px;
     
   } 
    
 }
 
 h3{
-  display: flex;
-  
-  font-size: 135px;
-  
+  display: flex;  
+  font-size: 135px;  
   justify-content: center;
   
-  @media (max-width: 700px) {
+  @media (max-width: 980px) {
     font-size: 80px;
     justify-content: flex-start;
+    padding-left: 40px;
     
-  } 
+    } 
 
   
 }
 
 h4{
   
-  font-size: 75px;
-  
+  font-size: 75px;  
   margin-left: 40px;
   
    @media (max-width: 700px) {
     font-size: 65px;
     justify-content: flex-start;
     
-  } 
-
-    
+    }     
 }
 
 h5{
@@ -86,9 +80,7 @@ h5{
     font-size: 35px;
     justify-content: flex-start;
     
-  } 
-
-    
+    }     
 }
 
 
@@ -113,10 +105,11 @@ h5{
   }
 
   @media (min-width: 1280px) {
-    padding-right{
+    
+padding: {
     right: 120px;
     left: 120px;
-    }   
+     }    
   }
 }
 
@@ -130,3 +123,4 @@ list-style-type: none;
   font-size: 25px;
   
 }
+
