--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,12 @@ h1 {
     padding-left: 40px;
   }
 }
+@media (max-width: 500px) {
+  h1 {
+    font-size: 175px;
+    padding-left: 40px;
+  }
+}
 
 h2 {
   display: flex;
@@ -31,7 +37,7 @@ h2 {
 }
 @media (max-width: 790px) {
   h2 {
-    font-size: 135px;
+    font-size: 125px;
     justify-content: flex-start;
     padding-left: 40px;
   }
@@ -44,7 +50,7 @@ h3 {
 }
 @media (max-width: 980px) {
   h3 {
-    font-size: 80px;
+    font-size: 65px;
     justify-content: flex-start;
     padding-left: 40px;
   }
@@ -56,7 +62,7 @@ h4 {
 }
 @media (max-width: 700px) {
   h4 {
-    font-size: 65px;
+    font-size: 55px;
     justify-content: flex-start;
   }
 }
