--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -27,6 +27,11 @@ h1{
     font-size: 200px;
     padding-left: 40px;
     } 
+  
+    @media (max-width: 500px) {
+    font-size: 175px;
+    padding-left: 40px;
+    } 
     
 }
 
@@ -36,7 +41,7 @@ h2{
   justify-content: flex-end;
   
   @media (max-width: 790px) {
-    font-size: 135px;
+    font-size: 125px;
     justify-content: flex-start;
     padding-left: 40px;
     
@@ -50,7 +55,7 @@ h3{
   justify-content: center;
   
   @media (max-width: 980px) {
-    font-size: 80px;
+    font-size: 65px;
     justify-content: flex-start;
     padding-left: 40px;
     
@@ -64,9 +69,11 @@ h4{
   font-size: 75px;  
   margin-left: 40px;
   
+  
    @media (max-width: 700px) {
-    font-size: 65px;
-    justify-content: flex-start;
+    font-size: 55px;
+    justify-content: flex-start; //not sure if i should add display flex
+    
     
     }     
 }
@@ -78,7 +85,7 @@ h5{
   
   @media (max-width: 700px) {
     font-size: 35px;
-    justify-content: flex-start;
+    justify-content: flex-start; //not sure if i should add display flex
     
     }     
 }
@@ -97,7 +104,10 @@ h5{
   
 @media (min-width: 400px) {
     padding: 25px;
+  
   }
+  
+ 
   
  
   @media (min-width: 800px) {
