--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ h1 {
 @media (max-width: 500px) {
   h1 {
     font-size: 175px;
-    padding-left: 40px;
+    padding-left: 5px;
   }
 }
 
@@ -40,6 +40,13 @@ h2 {
     font-size: 125px;
     justify-content: flex-start;
     padding-left: 40px;
+  }
+}
+@media (max-width: 590px) {
+  h2 {
+    font-size: 115px;
+    justify-content: flex-start;
+    padding-left: 10px;
   }
 }
 
@@ -64,6 +71,7 @@ h4 {
   h4 {
     font-size: 55px;
     justify-content: flex-start;
+    margin-left: 5px;
   }
 }
 
