--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -30,7 +30,7 @@ h1{
   
     @media (max-width: 500px) {
     font-size: 175px;
-    padding-left: 40px;
+    padding-left: 5px;
     } 
     
 }
@@ -44,6 +44,13 @@ h2{
     font-size: 125px;
     justify-content: flex-start;
     padding-left: 40px;
+    
+  } 
+  
+  @media (max-width: 590px) {
+    font-size: 115px;
+    justify-content: flex-start;
+    padding-left: 10px;
     
   } 
    
@@ -73,6 +80,7 @@ h4{
    @media (max-width: 700px) {
     font-size: 55px;
     justify-content: flex-start; //not sure if i should add display flex
+    margin-left: 5px;
     
     
     }     
