--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,8 @@ h1 {
 @media (max-width: 500px) {
   h1 {
     font-size: 175px;
-    padding-left: 5px;
+    padding-left: 7px;
+    margin-bottom: -30px;
   }
 }
 
@@ -46,7 +47,7 @@ h2 {
   h2 {
     font-size: 115px;
     justify-content: flex-start;
-    padding-left: 10px;
+    padding-left: 40px;
   }
 }
 
@@ -71,7 +72,7 @@ h4 {
   h4 {
     font-size: 55px;
     justify-content: flex-start;
-    margin-left: 5px;
+    margin-left: 40px;
   }
 }
 
@@ -89,15 +90,12 @@ h5 {
 .events {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  /*grid-template-rows: 1fr .9fr .7fr .7fr .4fr 1fr*/
 }
 
-.container {
-  padding: 18px;
-}
 @media (min-width: 400px) {
   .container {
-    padding: 25px;
+    padding-right: 1px;
+    padding-left: 1px;
   }
 }
 @media (min-width: 800px) {
