--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -30,7 +30,8 @@ h1{
   
     @media (max-width: 500px) {
     font-size: 175px;
-    padding-left: 5px;
+    padding-left: 7px;
+      margin-bottom:-30px
     } 
     
 }
@@ -50,7 +51,7 @@ h2{
   @media (max-width: 590px) {
     font-size: 115px;
     justify-content: flex-start;
-    padding-left: 10px;
+    padding-left: 40px;
     
   } 
    
@@ -80,7 +81,7 @@ h4{
    @media (max-width: 700px) {
     font-size: 55px;
     justify-content: flex-start; //not sure if i should add display flex
-    margin-left: 5px;
+    margin-left: 40px;
     
     
     }     
@@ -102,20 +103,21 @@ h5{
 .events {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  /*grid-template-rows: 1fr .9fr .7fr .7fr .4fr 1fr*/
+  
 }
 
 
 .container {
-  padding: 18px;  
+  
   
   
 @media (min-width: 400px) {
-    padding: 25px;
+    padding: {
+    right: 1px;
+    left: 1px;
+     } 
   
-  }
-  
- 
+  } 
   
  
   @media (min-width: 800px) {
