--- a/css/styles.css
+++ b/css/styles.css
@@ -19,14 +19,22 @@ h1 {
 }
 @media (max-width: 700px) {
   h1 {
-    font-size: 200px;
+    font-size: 220px;
     padding-left: 40px;
+    margin-bottom: -30px;
+  }
+}
+@media (max-width: 600px) {
+  h1 {
+    font-size: 200px;
+    padding-left: 20px;
+    margin-bottom: -30px;
   }
 }
 @media (max-width: 500px) {
   h1 {
     font-size: 175px;
-    padding-left: 7px;
+    padding-left: 14px;
     margin-bottom: -30px;
   }
 }
@@ -38,7 +46,7 @@ h2 {
 }
 @media (max-width: 790px) {
   h2 {
-    font-size: 125px;
+    font-size: 165px;
     justify-content: flex-start;
     padding-left: 40px;
   }
