--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -24,13 +24,20 @@ h1{
   font-size: 300px;  
   
   @media (max-width: 700px) {
-    font-size: 200px;
+    font-size: 220px;
     padding-left: 40px;
+    margin-bottom:-30px
+    } 
+  
+  @media (max-width: 600px) {
+    font-size: 200px;
+    padding-left: 20px;
+    margin-bottom:-30px
     } 
   
     @media (max-width: 500px) {
     font-size: 175px;
-    padding-left: 7px;
+    padding-left: 14px;
       margin-bottom:-30px
     } 
     
@@ -42,7 +49,7 @@ h2{
   justify-content: flex-end;
   
   @media (max-width: 790px) {
-    font-size: 125px;
+    font-size: 165px;
     justify-content: flex-start;
     padding-left: 40px;
     
