--- a/css/styles.css
+++ b/css/styles.css
@@ -17,21 +17,21 @@ h1, h2, h3, h4, h5 {
 h1 {
   font-size: 300px;
 }
-@media (max-width: 700px) {
+@media (max-width: 750px) {
   h1 {
-    font-size: 220px;
-    padding-left: 40px;
-    margin-bottom: -30px;
-  }
-}
-@media (max-width: 600px) {
-  h1 {
-    font-size: 200px;
+    font-size: 250px;
     padding-left: 20px;
     margin-bottom: -30px;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 650px) {
+  h1 {
+    font-size: 200px;
+    padding-left: 14px;
+    margin-bottom: -30px;
+  }
+}
+@media (max-width: 550px) {
   h1 {
     font-size: 175px;
     padding-left: 14px;
@@ -51,6 +51,13 @@ h2 {
     padding-left: 40px;
   }
 }
+@media (max-width: 650px) {
+  h2 {
+    font-size: 145px;
+    justify-content: flex-start;
+    padding-left: 40px;
+  }
+}
 @media (max-width: 590px) {
   h2 {
     font-size: 115px;
@@ -66,6 +73,20 @@ h3 {
 }
 @media (max-width: 980px) {
   h3 {
+    font-size: 95px;
+    justify-content: flex-start;
+    padding-left: 40px;
+  }
+}
+@media (max-width: 700px) {
+  h3 {
+    font-size: 75px;
+    justify-content: flex-start;
+    padding-left: 40px;
+  }
+}
+@media (max-width: 600px) {
+  h3 {
     font-size: 65px;
     justify-content: flex-start;
     padding-left: 40px;
@@ -79,7 +100,7 @@ h4 {
 @media (max-width: 700px) {
   h4 {
     font-size: 55px;
-    justify-content: flex-start;
+    /*justify-content: flex-start; //not sure if i should add display flex*/
     margin-left: 40px;
   }
 }
@@ -91,7 +112,7 @@ h5 {
 @media (max-width: 700px) {
   h5 {
     font-size: 35px;
-    justify-content: flex-start;
+    /*justify-content: flex-start; //not sure if i should add display flex*/
   }
 }
 
