--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -23,19 +23,19 @@ body {
 h1{
   font-size: 300px;  
   
-  @media (max-width: 700px) {
-    font-size: 220px;
-    padding-left: 40px;
-    margin-bottom:-30px
-    } 
-  
-  @media (max-width: 600px) {
-    font-size: 200px;
+  @media (max-width: 750px) {
+    font-size: 250px;
     padding-left: 20px;
     margin-bottom:-30px
     } 
   
-    @media (max-width: 500px) {
+  @media (max-width: 650px) {
+    font-size: 200px;
+    padding-left: 14px;
+    margin-bottom:-30px
+    } 
+  
+    @media (max-width: 550px) {
     font-size: 175px;
     padding-left: 14px;
       margin-bottom:-30px
@@ -50,6 +50,13 @@ h2{
   
   @media (max-width: 790px) {
     font-size: 165px;
+    justify-content: flex-start;
+    padding-left: 40px;
+    
+  } 
+  
+   @media (max-width: 650px) {
+    font-size: 145px;
     justify-content: flex-start;
     padding-left: 40px;
     
@@ -70,12 +77,25 @@ h3{
   justify-content: center;
   
   @media (max-width: 980px) {
+    font-size: 95px;
+    justify-content: flex-start;
+    padding-left: 40px;
+    
+    }  
+  
+  @media (max-width: 700px) {
+    font-size: 75px;
+    justify-content: flex-start;
+    padding-left: 40px;
+    
+    }  
+  
+  @media (max-width: 600px) {
     font-size: 65px;
     justify-content: flex-start;
     padding-left: 40px;
     
     } 
-
   
 }
 
@@ -87,7 +107,7 @@ h4{
   
    @media (max-width: 700px) {
     font-size: 55px;
-    justify-content: flex-start; //not sure if i should add display flex
+    /*justify-content: flex-start; //not sure if i should add display flex*/
     margin-left: 40px;
     
     
@@ -101,7 +121,7 @@ h5{
   
   @media (max-width: 700px) {
     font-size: 35px;
-    justify-content: flex-start; //not sure if i should add display flex
+    /*justify-content: flex-start; //not sure if i should add display flex*/
     
     }     
 }
