--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,8 +1,9 @@
+$color-blue: #088ca5;
+
 * {
   box-sizing: border-box;
 }
 
-$color-blue: #088ca5;
 
 body {
   background-color: $color-blue;
@@ -125,6 +126,11 @@ h5 {
   }
 }
 
+ul {
+
+  list-style-type: none;
+}
+
 
 .events {
   display: grid;
@@ -158,15 +164,9 @@ h5 {
 }
 
 
-ul {
 
-  list-style-type: none;
-}
 
-.event-list-one,
-.event-list-two,
-.event-list-three,
-.event-list-four {
+.event-list{
   font-size: 25px;
 
 }
