--- a/css/styles.css
+++ b/css/styles.css
@@ -133,5 +133,10 @@ ul {
 }
 
 .event-list {
-  font-size: 20px;
+  font-size: 25px;
+}
+@media (max-width: 800px) {
+  .event-list {
+    font-size: 20px;
+  }
 }
