--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -179,6 +179,12 @@ ul {
 
 
 .event-list{
-  font-size: 20px;
+  font-size: 25px;
+  
+  
+   @media (max-width: 800px) {
+    font-size: 20px;
+    }
+  
 
 }
